# dash-app

./: README.md  app.py  pyproject.toml
components/: encabezado.py  formulario.py  selector.py
helpers/: lectura_datos.py
