[tool.poetry]
name = "dash-app"
version = "0.1.0"
description = ""
authors = ["MJChimal <mjchimal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "1.13.3"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
